# follow_nao

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py  thirdparty.repos
config/: follow_behavior.xml
follow_nao/: entity_tracker.py  entity_tracker_fake_3d.py  motion_control.py  motion_control_2d.py  motion_control_3d.py  pid_controller.py  yolo_to_standard.py
include/follow_nao/bt_nodes/: follow_action.hpp  is_target_detected_condition.hpp  spin_search_action.hpp
launch/: 2d_follow_nao.launch.py  2d_track.launch.py  3d_follow_nao.launch.py  3d_track.launch.py  bt_follow_nao.launch.py  track.launch.py
src/: bt_follow_node.cpp
src/bt_nodes/: follow_action.cpp  is_target_detected_condition.cpp  spin_search_action.cpp
